# KamWerksCardIndex-New

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml
.github/workflows/: docs.yml
magpie_engine/: Cargo.toml  README.md
magpie_engine/src/: fetch.rs  helper.rs  lib.rs  prelude.rs  query.rs
magpie_engine/src/cards/: cards.rs  mod.rs  sets.rs
magpie_engine/src/data/: cards.rs  sets.rs
magpie_engine/src/fetch/: Untitled-1.http  Untitled-1.url  aug.rs  cti.rs  desc.rs  imf.rs  mod.rs
magpie_tutor/: Cargo.toml  README.md
magpie_tutor/src/: data.rs  embed.rs  emojis.rs  engine.rs  fuzzy.rs  handler.rs  helper.rs  lib.rs  macro.rs  magpie.rs  main.rs  message.rs  query.rs  search.rs  traits.rs
magpie_tutor/src/handler/: button.rs  message.rs
magpie_tutor/src/helper/: fuzzy.rs
magpie_tutor/src/query/: lexer.rs  parser.rs
magpie_tutor/src/search/: embed.rs  portrait.rs
magpie_tutor/src/search/embed/: aug.rs  desc.rs  imf.rs
