[package]
name = "magpie_engine"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
todo = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
isahc = {version = "1", features = ["json"]}

[features]
async = []
